# OC_P9

./: .gitignore  main.py  pyproject.toml
mission/: briefing.txt  etapes.txt  mission.txt
notebook/: 01_exploration_donnees.ipynb  02_pretraitement_extraction_features.ipynb  03_analyse_non_supervisee.ipynb  04_semi_supervise.ipynb  05_mlflow_setup.ipynb  06_test_autre_DB.ipynb
notebook/outputs/etape1/: labels_distribution.csv  sample_paths.json
notebook/outputs/etape2/: features.npy  metadata.csv
notebook/outputs/etape3/: df_2d.csv  features_scaled.npy  labels_faibles.csv  metadata_final.csv  metadata_prepared.csv  metadata_with_clusters.csv  pca_2d.npy  tsne_2d.npy
